does it work now idk

--- a/index.html
+++ b/index.html
@@ -21,7 +21,11 @@
         <div class="box" id="box8" onclick="placeMarker(8)">-</div>
         <div class="box" id="box9" onclick="placeMarker(9)">-</div>
     </div>
+
     <script src="./ticTacToe.js"></script>
+    <footer>
+        <button onclick="resetGame">Reset</button>
+    </footer>
 </body>
 <script src="./ticTacToe.js"></script>
 </html>
