--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
         <div class="box" id="box8" onclick="placeMarker(8)">-</div>
         <div class="box" id="box9" onclick="placeMarker(9)">-</div>
     </div>
-
+    <button onclick="resetGame()">Reset</button>
     <script src="./ticTacToe.js"></script>
     <footer>
-        <button onclick="resetGame">Reset</button>
+        
     </footer>
 </body>
 <script src="./ticTacToe.js"></script>
